
/********************* Aanpassingen t.o.v. versie 3.7  **********************************\

R780:
- Bug: SendTo Fast werkte niet altijd correct.
- Issue 789: Nesting van file executes afvangen
- Issue 818: Alarm op WorkDays (WKD) en WeekendDays (WND) (Tevens toegepast op Time events in de eventlist).
- Issue 863: Nodo ziet geen RF units meer Build is R746.
- Issue 864: Fade proces van plugin 23 wordt afgebroken.
- Issue 870: TimerRandom.
- Issue 893: BreakOn binnen een script.
- Commando 'VariableToggle' vervallen. Maakt nu deel uit als optie voor 'FlagSet' 
- Toegevoegd commando 'FlagSet <VlagNummer>,<State>', Vlagnummer is een waarde 1..32 of 'All'. State='On', 'Off', 'Toggle' . Vlaggen worden op alle Nodo's globaal beheerd. Bij 'All' geen event gegenereerd.
- Toegevoegd event 'Flag'
- Toegevoegd commando ' BreakOnFlag <VlagNummer>,<State>'
- Toegevoegd commando 'FlagSync', geen parameters. Deze zorgt er voor dat alle nodo's in het landschap de vlaggen over neemt zoals die op deze nodo zijn ingesteld.   
      
R782:
- Aanpassing timings SendTo: toename betrouwbaarheid door meer tijd tussen omschakelen zenden/ontvangen
- diverse kleine aanpassingen onder de motorkap.



ToDo:
- %..% in scriptfiles testen.
- Communicatie WebApp testen.
 