@@ -12,16 +12,25 @@ R780:
 - Commando 'VariableToggle' vervallen. Maakt nu deel uit als optie voor 'FlagSet' 
 - Toegevoegd commando 'FlagSet <VlagNummer>,<State>', Vlagnummer is een waarde 1..32 of 'All'. State='On', 'Off', 'Toggle' . Vlaggen worden op alle Nodo's globaal beheerd. Bij 'All' geen event gegenereerd.
 - Toegevoegd event 'Flag'
-- Toegevoegd commando ' BreakOnFlag <VlagNummer>,<State>'
+- Toegevoegd commando 'BreakOnFlag <VlagNummer>,<State>'
 - Toegevoegd commando 'FlagSync', geen parameters. Deze zorgt er voor dat alle nodo's in het landschap de vlaggen over neemt zoals die op deze nodo zijn ingesteld.   
       
 R782:
 - Aanpassing timings SendTo: toename betrouwbaarheid door meer tijd tussen omschakelen zenden/ontvangen
 - diverse kleine aanpassingen onder de motorkap.
 
+R783:
+- Aanpassing #defines om eventueel geheugen te besparen door delen code niet mee te compileren:
+    #define CFG_CLOCK 
+    #define CFG_SOUND
+    #define CFG_WIRED
+    #define CFG_I2C  
+    #define CFG_SLEEP
 
 
-ToDo:
+Todo:
 - %..% in scriptfiles testen.
 - Communicatie WebApp testen.
+- Variabelen globaal.
+- FlagSync pull i.p.v. push
  
